--- a/crm/templates/crm/pages/applications/application_update.html
+++ b/crm/templates/crm/pages/applications/application_update.html
@@ -3,7 +3,7 @@
 
 {% block style %}
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'crm/dist/css/bootstrap3-wysihtml5.min.css' %}">
     <style>
         iframe {
@@ -151,7 +151,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.min.js"></script>
     <script src="{% static 'crm/scripts/applications/application_create.js' %}"></script>
     <script>
         // AJAX
@@ -269,8 +269,9 @@
           }
         });
         $('input[name="date"]').mask('99.99.9999');
-        $('input[name="time"]').datetimepicker({
-            format: 'HH:mm',
+        $('input[name="time"]').timepicker({
+            showInputs: false,
+            showMeridian: false,
         });
     </script>
 {% endblock %}
