--- a/crm/templates/crm/pages/applications/application_create.html
+++ b/crm/templates/crm/pages/applications/application_create.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block style %}
-    <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+    <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'crm/dist/css/bootstrap3-wysihtml5.min.css' %}">
     <style>
         iframe {
@@ -158,7 +158,7 @@
     <script src="{% static 'crm/dist/js/bootstrap-wysihtml5.ru-RU.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
     <script src="{% static 'crm/scripts/applications/application_create.js' %}"></script>
     <script>
@@ -259,8 +259,9 @@
           }
         });
         $('input[name="date"]').mask('99.99.9999');
-        $('input[name="time"]').datetimepicker({
-            format: 'HH:mm'
+        $('input[name="time"]').timepicker({
+            showInputs: false,
+            showMeridian: false,
         });
     </script>
 {% endblock %}
