--- a/crm/templates/crm/pages/meter_readings/meter_reading_detail.html
+++ b/crm/templates/crm/pages/meter_readings/meter_reading_detail.html
@@ -104,3 +104,9 @@
     </div>
     <div style="height: 30px"></div>
 {% endblock %}
+
+{% block script %}
+    <script>
+        $(':input[readonly]').css({'background-color': 'white'});
+    </script>
+{% endblock %}
