--- a/crm/templates/crm/pages/owners/owners_list.html
+++ b/crm/templates/crm/pages/owners/owners_list.html
@@ -158,7 +158,7 @@
                                 </td>
                                 <td style="padding: 6px 5px 7px 4px; ">
                                     <div class="btn-group pull-right">
-                                        <button type="button" class="btn btn-default btn-sm" title="Отправить сообщение" data-toggle="tooltip"><i class="fa fa-envelope"></i></button>
+                                        <a href="{% url 'message_create' %}?owner_id={{ owner.id }}" class="btn btn-default btn-sm" title="Отправить сообщение" data-toggle="tooltip"><i class="fa fa-envelope"></i></a>
                                         <a class="btn btn-default btn-sm" href="{% url 'owner_update' owner.id %}" title="Редактировать" data-toggle="tooltip"><i class="fa fa-pencil-alt"></i></a>
                                         <button title="Удалить владельца" type="button" class="btn btn-default btn-sm not-allowed" data-bs-toggle="modal" data-bs-target="#deleteModal-{{ forloop.counter }}"><i class="fa fa-trash-alt"></i></button>
                                     </div>
